ops/dev/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devsu
  name: devsu-dev-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsu-dev
  template:
    metadata:
      labels:
        app: devsu-dev
    spec:
      containers:
      - name: devsu-dev
        image: 166472935010.dkr.ecr.us-east-1.amazonaws.com/devsu-dev:0.0.1
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  namespace: devsu
  name: devsu-dev-service
spec:
  selector:
    app: devsu-dev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:166472935010:certificate/9b7b11df-fdb5-4337-84d3-68adb8e5bf4c
    alb.ingress.kubernetes.io/group.name: ingress-controller
    alb.ingress.kubernetes.io/subnets: 	subnet-0360236c76850fddb,subnet-05d6fd54b8d6cf9c9,subnet-0b0c8eddc1ea35cfa
    alb.ingress.kubernetes.io/security-groups: sg-01ef91b99b22bb85b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: '/api/users'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '60'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '50'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/success-codes: '200'
    external-dns.alpha.kubernetes.io/hostname: devsu-dev.jtuberquia.com
  name: devsu-dev-ingress
  namespace: devsu
spec:
  ingressClassName: alb
  rules:
    - host: devsu-dev.jtuberquia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-dev-service
                port:
                  number: 80
